--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "karma-chrome-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.2",
     "karma-jspm": "^1.0.1",
+    "karma-phantomjs-launcher": "^0.1.4",
     "object.assign": "^1.0.3",
     "run-sequence": "^1.0.2"
   },
